// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<External /> renders clean correctly 1`] = `
.bDAHEO {
  background-image: unset;
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="sc-bdVaJa bDAHEO"
  href="/url"
  size="unset"
>
  Text
</a>
`;

exports[`<External /> renders correctly 1`] = `
.dENHsZ {
  background-image: linear-gradient(transparent 50%, currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="sc-bdVaJa dENHsZ"
  href="/url"
  size="unset"
>
  Text
</a>
`;

exports[`<External /> renders size correctly 1`] = `
.cMVQBC {
  background-image: linear-gradient(transparent 50%, currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="sc-bdVaJa cMVQBC"
  href="/url"
  size="16px"
>
  Text
</a>
`;
